--- a/less/style.less
+++ b/less/style.less
@@ -9,7 +9,7 @@ html, body {
 
 body {
   font-family: Atari;
-  background-color: #000;
+//  background-color: #000;
   div.body, div.intro {
     width: 1000px;
     height: 800px;
