--- a/less/style.less
+++ b/less/style.less
@@ -20,6 +20,13 @@ body {
   }
 
   div.intro {
+    span.text-content {
+      opacity: 0;
+      z-index: -100;
+      position: absolute;
+      top:0;
+      left: 0;
+    }
   }
 
   div.body {
