finished intro, work on maps

--- a/less/style.less
+++ b/less/style.less
@@ -10,7 +10,7 @@ html, body {
 body {
   font-family: Atari;
 //  background-color: #000;
-  div.body, div.intro {
+  div.body, div.canvas {
     width: 1000px;
     height: 800px;
     margin-top: 20px;
@@ -19,14 +19,7 @@ body {
     padding: 10px;
   }
 
-  div.intro {
-    span.text-content {
-      opacity: 0;
-      z-index: -100;
-      position: absolute;
-      top:0;
-      left: 0;
-    }
+  div.canvas {
   }
 
   div.body {
