--- a/less/style.less
+++ b/less/style.less
@@ -4,19 +4,18 @@
 }
 
 html, body {
-  height: 100%;
 }
 
 body {
   font-family: Atari;
-//  background-color: #000;
+  background-color: #000;
   div.body, div.canvas {
-    width: 1000px;
-    height: 800px;
-    margin-top: 20px;
+//    width: 800px;
+//    height: 400px;
+//    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
-    padding: 10px;
+//    padding: 10px;
   }
 
   div.canvas {
@@ -33,6 +32,7 @@ body {
     Outro
   */
   div.outro {
+    display: none;
     opacity: 0;
   }
 
