zoom in and out room

--- a/less/style.less
+++ b/less/style.less
@@ -9,23 +9,14 @@ html, body {
 body {
   font-family: Atari;
   background-color: #000;
-  div.body, div.canvas {
-//    width: 800px;
-//    height: 400px;
-//    margin-top: 20px;
+  div.canvas {
     margin-left: auto;
     margin-right: auto;
-//    padding: 10px;
   }
-
+  #canv_hidden {
+      display: none;
+  }
   div.canvas {
-  }
-
-  div.body {
-    background-color: #fff;
-    text-align: center;
-    display: none;
-    z-index: 0;
   }
 
   /*
