implemented the last visual

--- a/less/style.less
+++ b/less/style.less
@@ -10,6 +10,7 @@ body {
   font-family: Atari;
   background-color: #000;
   div.canvas {
+    margin:auto;
     margin-left: auto;
     margin-right: auto;
   }
