integraded room logic in demo.js, triggers to change visual by time

--- a/less/style.less
+++ b/less/style.less
@@ -10,11 +10,10 @@ body {
   font-family: Atari;
   background-color: #000;
   div.canvas {
+    left: 20px;
     margin:auto;
-    margin-left: auto;
-    margin-right: auto;
   }
-  #canv_hidden {
+  #canv_hidden, #canv_hidden_intro {
       display: none;
   }
   div.canvas {
