visuals working again

--- a/less/style.less
+++ b/less/style.less
@@ -13,7 +13,7 @@ body {
     left: 20px;
     margin:auto;
   }
-  #canv_hidden, #canv_hidden_intro {
+  #canv_hidden, #canv_hidden_intro, #canv_visual1, #canv_visual2, #canv_visual3, #canv_visual4  {
       display: none;
   }
   div.canvas {
