--- a/less/style.less
+++ b/less/style.less
@@ -10,13 +10,12 @@ body {
   font-family: Atari;
   background-color: #000;
   div.canvas {
-    left: 20px;
-    margin:auto;
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
   }
   #canv_hidden, #canv_hidden_intro, #canv_visual0, #canv_visual1, #canv_visual2, #canv_visual3  {
       display: none;
-  }
-  div.canvas {
   }
 
   /*
@@ -25,6 +24,12 @@ body {
   div.outro {
     display: none;
     opacity: 0;
+
+    div.logo {
+      width: 350px;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
 
   div.outro-text {
@@ -59,8 +64,5 @@ body {
         float: right;
       }
     }
-
   }
-
 }
-
